<resources>
    <string name="scene_name">Scene</string>
    <string name="app_name">MeshStick</string>
    <string name="text_for_text_view">Text</string>
    <string name="action_settings">Settings</string>
    <string name="count_lamps">0</string>
    <string name="num">num</string>
    <string name="settings">settings</string>
    <string name="save">save</string>
    <string name="scenes">scenes</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="name">Name</string>
    <string name="lamp_name">Lamp name</string>
    <string name="lamps">Lamps:</string>
    <string name="groups">Groups:</string>
    <string name="saved_scene">SavedScene</string>
    <string name="load">load</string>
    <string name="add_group">Add Group</string>
    <string name="add_lamp">Add Lamp</string>
    <string name="group_name">groupName</string>
    <string name="mesh_name">meshName</string>
    <string name="active">Active</string>

</resources>