<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#abcdef"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:text="@string/saved_scene"
            android:layout_width="198dp"
            android:layout_height="85dp"
            android:id="@+id/tv_savedSceneName"
            android:textSize="30sp"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/lamps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_savedNumOfLamps"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.83"
            app:layout_constraintStart_toEndOf="@+id/tv_savedSceneName" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/count_lamps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_savedNumOfLampsNum"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp" app:layout_constraintVertical_bias="0.84"
            app:layout_constraintStart_toEndOf="@+id/tv_savedNumOfLamps" app:layout_constraintHorizontal_bias="1.0"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/stat_sys_download"
            android:id="@+id/bt_load"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_savedSceneName" app:layout_constraintHorizontal_bias="0.992"
            android:focusable="true" android:contentDescription="@string/load"/>
</androidx.constraintlayout.widget.ConstraintLayout>