<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.meshstick_withoutmesh.SettingsActivity"
        android:background="@color/mainDarkBlue"
>

    <TextView
            android:text="@string/red"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:id="@+id/tv_red"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_green" android:layout_marginBottom="20dp"
            android:layout_marginStart="4dp" android:textColor="@color/mainWhite"/>
    <TextView
            android:text="@string/green"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:id="@+id/tv_green"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_blue"
            android:layout_marginStart="4dp" android:layout_marginBottom="20dp" android:textColor="@color/mainWhite"/>
    <TextView
            android:text="@string/blue"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:id="@+id/tv_blue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="116dp" android:textColor="@color/mainWhite"/>
    <EditText
            android:layout_width="206dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/et_lampName"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_lampName"
            app:layout_constraintHorizontal_bias="0.4" android:layout_marginTop="28dp"
            tools:ignore="LabelFor,TouchTargetSizeCheck" android:textColor="@color/mainWhite"/>
    <TextView
            android:text="@string/lamp_name"
            android:layout_width="117dp"
            android:layout_height="29dp"
            android:id="@+id/tv_lampName"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_showColor" app:layout_constraintVertical_bias="0.08"
            android:textColor="@color/mainWhite"/>
    <SeekBar
            android:layout_width="255dp"
            android:layout_height="20dp"
            android:id="@+id/sb_red"
            android:max="255"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintStart_toEndOf="@+id/tv_red"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toTopOf="@+id/sb_green" android:layout_marginBottom="36dp"/>
    <SeekBar
            android:layout_width="255dp"
            android:layout_height="20dp"
            android:id="@+id/sb_green"
            android:max="255"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toEndOf="@+id/tv_green" app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintBottom_toTopOf="@+id/sb_blue" android:layout_marginBottom="40dp"/>
    <SeekBar
            android:layout_width="255dp"
            android:layout_height="20dp"
            android:id="@+id/sb_blue"
            android:max="255"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/tv_blue"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="124dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="175dp"
            android:layout_height="175dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/ll_showColor" app:layout_constraintTop_toBottomOf="@+id/et_lampName"
            android:layout_marginTop="40dp" app:layout_constraintBottom_toTopOf="@+id/sb_red"
            app:layout_constraintVertical_bias="0.245">
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>