<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/group"
        android:orientation="vertical"
        android:paddingLeft="10dp" android:paddingRight="10dp">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@color/mainDarkBlue">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@drawable/scenes_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/cl_group">

                <ImageButton
                        android:orientation="vertical"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/bt_expand"
                        android:layout_marginStart="16dp" android:background="@drawable/ic_expand_more"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
                </ImageButton>
                <TextView
                        android:text="@string/group_name"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tv_groupName"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/bt_expand"
                        app:layout_constraintEnd_toStartOf="@+id/bt_settings_group"
                        app:layout_constraintHorizontal_bias="0.056" app:layout_constraintVertical_bias="0.526"
                        android:textColor="@color/mainWhite" android:fontFamily="@font/inter_bold"/>
                <ImageButton
                        android:layout_width="199dp"
                        android:layout_height="80dp"
                        android:background="#00ABCDEF"
                        app:srcCompat="@drawable/ic_group_shape" android:id="@+id/bt_settings_group"
                        android:contentDescription="@string/settings"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:ignore="TouchTargetSizeCheck"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="-25dp"
                        android:elevation="50dp" android:scaleX="1.5" android:scaleY="1.5"
                        android:rotationY="-21" android:rotationX="21"/>
                <TextView
                        android:text="9 pcs."
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/bt_expand" android:layout_marginStart="4dp"
                        android:fontFamily="@font/inter" android:textSize="13sp" android:textColor="@color/mainWhite"
                        android:layout_marginBottom="5dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_lampsOfGroup" android:paddingLeft="10dp"/>
            <TextView
                    android:text="@string/add_lamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tv_addLampPosition"
                    android:paddingLeft="20dp" android:alpha="0.6" android:fontFamily="@font/inter"
                    android:textColor="@color/mainWhite"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>